yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groups
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: groups
  template:
    metadata:
      labels:
        name: groups
    spec:
      containers:
      - name: groups
        image: docker.io/freegroup/thindexed-groups:0.1.0-1
