yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: groups
  namespace: default
spec:
  hosts: ["app.<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          exact: "/groups"
      redirect:
        uri: "/groups/"
    - match:
      - uri:
          prefix: "/groups/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: groups
